# feign-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ldj/: __init__.py
ldj/center/: __init__.py
ldj/center/nacos/: NacosClient.py  NacosIns.py
ldj/center/prop/: Properties.py  __init__.py
ldj/common/: Cache.py  Constant.py  __init__.py
ldj/config/: __init__.py  settings.py
ldj/example/: DictApi.py  DictApi2.py  DictApi2NoCenter.py  DictApiNoCenter.py  ExampleConfig.py  TestDictApi.py  TestDictApi2.py  TestDictApi2NoCenter.py  TestDictApiNoCenter.py  TestInterceptorCall.py  TestNacosCall.py  TestStaticCall.py  models.py
ldj/example/dto/: __init__.py  models.py
ldj/example/interceptor/: MyInterceptor.py  __init__.py
ldj/feign/: __init__.py
ldj/feign/center/: NacosCenter.py  RegisterCenter.py  RegisterCenterHelper.py  RegisterSelect.py  __init__.py
ldj/feign/context/: ServiceContext.py
ldj/feign/decorator/: Api.py  Feign.py  FeignApi.py  __init__.py
ldj/feign/enums/: BaseEnum.py  Method.py  RegisterCenterType.py  RouterType.py  __init__.py
ldj/feign/exception/: AuthException.py  BusinessException.py  FeignException.py  __init__.py
ldj/feign/interceptor/: DefaultInterceptor.py  Interceptor.py  __init__.py
ldj/feign/model/: HostInfo.py  Page.py  Request.py  Response.py  ServiceInfo.py  __init__.py
ldj/feign/router/: HashRouter.py  RandomRouter.py  RoundRobinRouter.py  Router.py  RouterHelper.py  __init__.py
ldj/feign/seria/: Deserialize.py  Serialize.py  __init__.py
ldj/feign/utils/: IpUtil.py  ReflectUtil.py  UrlUtil.py  (+1 more)
(+3 files in other folders)
